<resources>
    <string name="app_name">Intentsproj</string>
    <string name="label1">Number 1</string>
    <string name="labek2">Number 2</string>
    <string name="but1">OK</string>
    <string name="num1">Number 1</string>
    <string name="num2">Number 2</string>
    <string name="plus">+</string>
    <string name="minas">-</string>
    <string name="multiply">*</string>
    <string name="devision">/</string>
</resources>
